--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -73,8 +73,8 @@
 		<ul>
 			<li><a href=""><p><i class="footer-icon biticon biticon-htmal5icon06"></i></p><span>返回首页</span></a></li>
 			<li><a href=""><p><i class="footer-icon biticon biticon-tubiao313"></i></p><span>在线沟通</span></a></li>
-			<li><a href="tel:400-109-3531"><p><i class="footer-icon biticon biticon-dianhua"></i></p><span>电话咨询</span></a></li>
-			<li><a href=""><p><i class="footer-icon biticon biticon-guanyuwomen"></i></p><span>关于我们</span></a></li>
+			<li><a href="tel:400-109-3531"><p><i class="footer-icon biticon biticon-dianhuaguhua"></i></p><span>电话咨询</span></a></li>
+			<li><a href=""><p><i class="footer-icon biticon biticon-guanyuwomen1"></i></p><span>关于我们</span></a></li>
 		</ul>
 	</footer>
 	<!-- 底部导航 //-->
