--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -11,6 +11,8 @@
 	<link href="css/public.css" type="text/css" rel="stylesheet" media="all"> 
 	<link href="css/animate.css" type="text/css" rel="stylesheet" media="all"> 
 	<link href="font-icon/iconfont.css" type="text/css" rel="stylesheet" media="all"> 
+	<link href="css/swiper.css" type="text/css" rel="stylesheet" media="all"> 
+
 </head>
 <body>
 	<!-- 头部导航 -->
@@ -67,6 +69,30 @@
 	</header>
 	<div id="hideNavCont"></div>
 	<!-- 头部导航// -->
+	<div class="main">
+		<section class="banner-swiper" id="bannerSwiper">
+			<div class="swiper-container">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide"><img src="img/banner_01.png"></div>
+					<div class="swiper-slide"><img src="img/banner_02.png"></div>
+					<div class="swiper-slide"><img src="img/banner_03.png"></div>
+					<div class="swiper-slide"><img src="img/banner_04.png"></div>
+					<div class="swiper-slide"><img src="img/banner_05.png"></div>
+				</div>
+				<!-- Add Pagination -->
+				<div class="swiper-pagination"></div>
+			</div>
+		</section>
+		<section class="banner-swiper" id="bannerSwiper">
+			<ul>
+				<li><a href=""><p><i class="footer-icon biticon biticon-htmal5icon06"></i></p><span>区块链</span></a></li>
+				<li><a href=""><p><i class="footer-icon biticon biticon-tubiao313"></i></p><span>游戏开发</span></a></li>
+				<li><a href="tel:400-109-3531"><p><i class="footer-icon biticon biticon-dianhuaguhua"></i></p><span>APP微信</span></a></li>
+				<li><a href=""><p><i class="footer-icon biticon biticon-guanyuwomen1"></i></p><span>金融软件</span></a></li>
+			</ul>
+		</section>
+		
+	</div>
 
 	<!-- 底部导航 -->
 	<footer class="footer_cont">
@@ -80,6 +106,7 @@
 	<!-- 底部导航 //-->
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/wow.min.js"></script>
-	<script src="js/main.js">></script>
+	<script src="js/swiper.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
