--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -8,11 +8,12 @@
 	<meta name="keywords" content="" />
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //适用于移动端 -->
-	<link href="css/public.css" type="text/css" rel="stylesheet" media="all"> 
+	
 	<link href="css/animate.css" type="text/css" rel="stylesheet" media="all"> 
 	<link href="font-icon/iconfont.css" type="text/css" rel="stylesheet" media="all"> 
 	<link href="css/swiper.css" type="text/css" rel="stylesheet" media="all"> 
-
+	<link href="css/public.css" type="text/css" rel="stylesheet" media="all">
+	<link href="css/home.css" type="text/css" rel="stylesheet" media="all"> 
 </head>
 <body>
 	<!-- 头部导航 -->
@@ -83,12 +84,32 @@
 				<div class="swiper-pagination"></div>
 			</div>
 		</section>
-		<section class="banner-swiper" id="bannerSwiper">
+		<section class="sort-cont" id="bannerSwiper">
 			<ul>
-				<li><a href=""><p><i class="footer-icon biticon biticon-htmal5icon06"></i></p><span>区块链</span></a></li>
-				<li><a href=""><p><i class="footer-icon biticon biticon-tubiao313"></i></p><span>游戏开发</span></a></li>
-				<li><a href="tel:400-109-3531"><p><i class="footer-icon biticon biticon-dianhuaguhua"></i></p><span>APP微信</span></a></li>
-				<li><a href=""><p><i class="footer-icon biticon biticon-guanyuwomen1"></i></p><span>金融软件</span></a></li>
+				<li><a href=""><p class="lanse"><i class="biticon biticon-relation"></i></p><h1>区块链</h1></a></li>
+				<li><a href=""><p class="fense"><i class="biticon biticon-youxi1"></i></p><h1>游戏开发</h1></a></li>
+				<li><a href=""><p class="lvse"><i class="biticon biticon-shouji"></i></p><h1>APP微信</h1></a></li>
+				<li><a href=""><p class="chengse"><i class="biticon biticon-meiyuandollar155"></i></p><h1>金融软件</h1></a></li>
+			</ul>
+		</section>
+		<section class="business-cont" id="bannerSwiper">
+			<div class="tiele-cont">
+				<h2 class="huise">主营业务<span><i></i>Main business</span></h2>
+				<div class="zhongx"></div>
+			</div>
+			<ul class="business_list">
+				<li>
+					<h1><i class="biticon biticon-deploymentunit"></i>区块链</h1>
+					<p>区块链是分布式数据存储、点对点传输、共识机制、加密算法等计算机技术的新型应用模式。</p>
+				</li>
+				<li>
+					<h1><i class="biticon biticon-deploymentunit"></i>游戏开发</h1>
+					<p>手机游戏开发指专门制作和开发手机游戏。它的处理能力与台式机的标准处理能力相比很有限，但是足够运行一个小型的游戏。</p>
+				</li>
+				<li>
+					<h1><i class="biticon biticon-deploymentunit"></i>金融软件</h1>
+					<p>金融指货币的发行、流通和回笼，贷款的发放和收回，存款的存入和提取，汇兑的往来等经济活动。</p>
+				</li>
 			</ul>
 		</section>
 		
