--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -114,6 +114,12 @@
 				</li>
 			</ul>
 		</section>
+		<section class="product-cont" id="bannerSwiper">
+			<div class="tiele-cont">
+				<h2 class="baise">特色产品<span><i></i>Characteristic product</span></h2>
+				<div class="zhongx"></div>
+			</div>
+		</section>
 		
 	</div>
 
