--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -39,7 +39,7 @@
 				</ul>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon  biticon biticon-youxichongzhi"></i><span>游戏开发</span><i class="biticon biticon-right"></i></a>
+				<a href="javascript:;"><i class="nav-icon  biticon biticon-youxi"></i><span>游戏开发</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
 					<li><a href="javascript:;"><span>棋牌游戏</span></a></li>
 					<li><a href="javascript:;"><span>H5游戏</span></a></li>
