--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -28,10 +28,10 @@
 		</nav>
 		<ul class="nav_cont" id="navCont">
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon biticon biticon-home"></i><span>首页</span></a>
+				<a href="javascript:;"><i class="nav-icon biticon biticon-shouye"></i><span>首页</span></a>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon biticon biticon-baasqukuailianfuwu"></i><span>区块链</span><i class="biticon biticon-right"></i></a>
+				<a href="javascript:;"><i class="nav-icon biticon biticon-wangluo"></i><span>区块链</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
 					<li><a href="javascript:;"><span>区块链技术开发</span></a></li>
 					<li><a href="javascript:;"><span>区块链项目服务</span></a></li>
@@ -47,7 +47,7 @@
 				</ul>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon  biticon biticon-shouji"></i><span>APP微信开发</span><i class="biticon biticon-right"></i></a>
+				<a href="javascript:;"><i class="nav-icon  biticon biticon-shouji1"></i><span>APP微信开发</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
 					<li><a href="javascript:;"><span>APP开发</span></a></li>
 					<li><a href="javascript:;"><span>微信开发</span></a></li>
@@ -58,13 +58,13 @@
 				<a href="javascript:;"><i class="nav-icon  biticon biticon-xiangao"></i><span>金融软件开发</span></a>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon  biticon biticon-heart"></i><span>品质服务</span></a>
+				<a href="javascript:;"><i class="nav-icon  biticon biticon-xihuan"></i><span>品质服务</span></a>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon  biticon biticon-user"></i><span>关于我们</span></a>
+				<a href="javascript:;"><i class="nav-icon  biticon biticon-yonghuming"></i><span>关于我们</span></a>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon  biticon biticon-hangyezixun"></i><span>行业咨讯</span></a>
+				<a href="javascript:;"><i class="nav-icon  biticon biticon-liebiaodaohang_zixun"></i><span>行业咨讯</span></a>
 			</li>
 		</ul>
 	</header>
@@ -105,12 +105,22 @@
 					</a>
 				</li>
 				<li>
-					<h1><i class="biticon biticon-youxi1"></i><b></b>游戏开发<span>查看详情》</span></h1>
-					<p>手机游戏开发指专门制作和开发手机游戏。它的处理能力与台式机的标准处理能力相比很有限，但是足够运行一个小型的游戏。</p>
+					<a href="">
+						<h1><i class="biticon biticon-xiaoyouxi"></i><b></b>游戏开发<span>查看详情》</span></h1>
+						<p>手机游戏开发指专门制作和开发手机游戏。它的处理能力与台式机的标准处理能力相比很有限，但是足够运行一个小型的游戏。</p>
+					</a>
 				</li>
 				<li>
-					<h1><i class="biticon biticon-meiyuandollar155"></i><b></b>金融软件<span>查看详情》</span></h1>
-					<p>金融指货币的发行、流通和回笼，贷款的发放和收回，存款的存入和提取，汇兑的往来等经济活动。</p>
+					<a href="">
+						<h1><i class="biticon biticon-app"></i><b></b>APP微信<span>查看详情》</span></h1>
+						<p>手机APP应用软件制作和微信公众号、小程序开发，拥有一支热情专业的开发团队，用户的诉求就是恋比特的追求。</p>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<h1><i class="biticon biticon-jiaoyiguanli"></i><b></b>金融软件<span>查看详情》</span></h1>
+						<p>金融指货币的发行、流通和回笼，贷款的发放和收回，存款的存入和提取，汇兑的往来等经济活动。</p>
+					</a>
 				</li>
 			</ul>
 		</section>
