--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -18,9 +18,9 @@
 <body>
 	<!-- 头部导航 -->
 	<header class="public_nav">
-		<nav class="nav_btn">
+		<nav class="nav_btn shenqi1">
 			<a href="/index.html" title="恋比特" class="nav_logo"></a>
-			<span id="navBtnIcon"  href="javascript:;" title="按钮" class="nav_btn_icon">
+			<span id="navBtnIcon"  href="javascript:;" title="按钮" class="nav_btn_icon shenqi2">
 	            <i></i>
 	            <i></i>
 	            <i></i>
@@ -129,7 +129,27 @@
 				<h2 class="baise">特色产品<span><i></i>Characteristic product</span></h2>
 				<div class="zhongx"></div>
 			</div>
+			<div class="product_tab shenqi1">
+				<a class="shenqi2 hover_tab" href="">区块链</a>
+				<a class="shenqi2" href="">小游戏</a>
+				<a class="shenqi2" href="">特色棋牌</a>
+				<a class="shenqi2" href="">金融软件</a>
+				<a class="shenqi2" href="">APP微信</a>
+			</div>
+			<ul class="product_list">
+				<li><img src="img/product_01.png"></li>
+				<li><img src="img/product_01.png"></li>
+				<li><img src="img/product_01.png"></li>
+				<li><img src="img/product_01.png"></li>
+			</ul>
+			<div class="product_more"><a href="">MORE+</a></div>
 		</section>
+		<section class="news-cont" id="bannerSwiper">
+			<div class="tiele-cont">
+				<h2 class="huise">新闻资讯<span><i></i>News and information</span></h2>
+				<div class="zhongx"></div>
+				</div>
+			</section>
 		
 	</div>
 
