--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -106,7 +106,7 @@
 				</li>
 				<li>
 					<a href="">
-						<h1><i class="biticon biticon-xiaoyouxi"></i><b></b>游戏开发<span>查看详情》</span></h1>
+						<h1><i class="biticon biticon-gameshield"></i><b></b>游戏开发<span>查看详情》</span></h1>
 						<p>手机游戏开发指专门制作和开发手机游戏。它的处理能力与台式机的标准处理能力相比很有限，但是足够运行一个小型的游戏。</p>
 					</a>
 				</li>
@@ -137,10 +137,10 @@
 				<a class="shenqi2" href="">APP微信</a>
 			</div>
 			<ul class="product_list">
-				<li><img src="img/product_01.png"></li>
-				<li><img src="img/product_01.png"></li>
-				<li><img src="img/product_01.png"></li>
-				<li><img src="img/product_01.png"></li>
+				<li><a href=""><img src="img/product_01.png"></a></li>
+				<li><a href=""><img src="img/product_01.png"></a></li>
+				<li><a href=""><img src="img/product_01.png"></a></li>
+				<li><a href=""><img src="img/product_01.png"></a></li>
 			</ul>
 			<div class="product_more"><a href="">MORE+</a></div>
 		</section>
