--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -148,8 +148,71 @@
 			<div class="tiele-cont">
 				<h2 class="huise">新闻资讯<span><i></i>News and information</span></h2>
 				<div class="zhongx"></div>
-				</div>
-			</section>
+			</div>
+			<ul class="news_list">
+				<li>
+					<a href="">
+						<div class="date_cont">
+							<span class="month_cont">08</span>
+							<span class="day_cont">18</span>
+						</div>
+						<div class="news_text">
+							<h1>区块链促进电子账单的演变</h1>
+							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<div class="date_cont">
+							<span class="month_cont">08</span>
+							<span class="day_cont">18</span>
+						</div>
+						<div class="news_text">
+							<h1>区块链促进电子账单的演变</h1>
+							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<div class="date_cont">
+							<span class="month_cont">08</span>
+							<span class="day_cont">18</span>
+						</div>
+						<div class="news_text">
+							<h1>区块链促进电子账单的演变</h1>
+							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<div class="date_cont">
+							<span class="month_cont">08</span>
+							<span class="day_cont">18</span>
+						</div>
+						<div class="news_text">
+							<h1>区块链促进电子账单的演变</h1>
+							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<div class="date_cont">
+							<span class="month_cont">08</span>
+							<span class="day_cont">18</span>
+						</div>
+						<div class="news_text">
+							<h1>区块链促进电子账单的演变</h1>
+							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						</div>
+					</a>
+				</li>
+			</ul>
+			<div class="product_more"><a href="">MORE+</a></div>
+		</section>
 		
 	</div>
 
