--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -213,6 +213,18 @@
 			</ul>
 			<div class="product_more"><a href="">MORE+</a></div>
 		</section>
+		<section class="contact-cont" id="bannerSwiper">
+			<div class="tiele-cont">
+				<h2 class="baise">联系我们<span><i></i>Contact us</span></h2>
+				<div class="zhongx"></div>
+			</div>
+			<div class="content_text">
+				<p>电　　话：<a href="tel:400-109-3531">400-109-3531</a></p>
+				<p>官　　网：<a href="">www.lovebit999.com</a></p>
+				<p>公司名称：恋比特国际科技发展(北京)有限责任公司</p>
+				<p>办公地址：北京市朝阳区建国门外大街甲6号D座28层</p>
+			</div>
+		</section>
 		
 	</div>
 
