--- a/lbtMobile/message.html
+++ b/lbtMobile/message.html
@@ -106,44 +106,13 @@
 		</section>
 		<section class="sort-cont" id="bannerSwiper">
 			<ul>
-				<li><a href=""><p class="lanse"><i class="biticon biticon-relation"></i></p><h1>区块链</h1></a></li>
-				<li><a href=""><p class="fense"><i class="biticon biticon-youxi1"></i></p><h1>游戏开发</h1></a></li>
-				<li><a href=""><p class="lvse"><i class="biticon biticon-shouji"></i></p><h1>APP微信</h1></a></li>
-				<li><a href=""><p class="chengse"><i class="biticon biticon-meiyuandollar155"></i></p><h1>金融软件</h1></a></li>
+				<li><a href=""><p><img src="img/business_01.png"></p><h1>区块链</h1></a></li>
+				<li><a href=""><p><img src="img/business_02.png"></p><h1>游戏开发</h1></a></li>
+				<li><a href=""><p><img src="img/business_03.png"></p><h1>APP微信</h1></a></li>
+				<li><a href=""><p><img src="img/business_04.png"></p><h1>金融软件</h1></a></li>
 			</ul>
 		</section>
-		<section class="business-cont" id="bannerSwiper">
-			<div class="tiele-cont">
-				<h2 class="huise">主营业务<span><i></i>Main business</span></h2>
-				<div class="zhongx"></div>
-			</div>
-			<ul class="business_list">
-				<li>
-					<a href="">
-						<h1><i class="biticon biticon-deploymentunit"></i><b></b>区块链<span>查看详情》</span></h1>
-						<p>区块链是分布式数据存储、点对点传输、共识机制、加密算法等计算机技术的新型应用模式。</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<h1><i class="biticon biticon-gameshield"></i><b></b>游戏开发<span>查看详情》</span></h1>
-						<p>手机游戏开发指专门制作和开发手机游戏。它的处理能力与台式机的标准处理能力相比很有限，但是足够运行一个小型的游戏。</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<h1><i class="biticon biticon-app"></i><b></b>APP微信<span>查看详情》</span></h1>
-						<p>手机APP应用软件制作和微信公众号、小程序开发，拥有一支热情专业的开发团队，用户的诉求就是恋比特的追求。</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<h1><i class="biticon biticon-jiaoyiguanli"></i><b></b>金融软件<span>查看详情》</span></h1>
-						<p>金融指货币的发行、流通和回笼，贷款的发放和收回，存款的存入和提取，汇兑的往来等经济活动。</p>
-					</a>
-				</li>
-			</ul>
-		</section>
+		
 		<section class="product-cont" id="bannerSwiper">
 			<div class="tiele-cont">
 				<h2 class="baise">特色产品<span><i></i>Characteristic product</span></h2>
@@ -177,69 +146,7 @@
 				<h2 class="huise">新闻资讯<span><i></i>News and information</span></h2>
 				<div class="zhongx"></div>
 			</div>
-			<ul class="news_list">
-				<li>
-					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
-						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
-						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
-						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
-						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
-						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
-						</div>
-					</a>
-				</li>
-			</ul>
-			<div class="product_more"><a href="">MORE+</a></div>
+			
 		</section>
 		<footer class="contact-cont" id="bannerSwiper">
 			<div class="tiele-cont">
@@ -255,6 +162,7 @@
 		</footer>
 		
 	</div>
+
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/swiper.js"></script>
