--- a/lbtMobile/news.html
+++ b/lbtMobile/news.html
@@ -19,7 +19,8 @@
 	<!-- 头部导航 -->
 	<header class="public_nav">
 		<nav class="nav_btn shenqi1">
-			<a href="/index.html" title="恋比特" class="nav_logo"></a>
+			<a class="nav-return shenqi2" href="javascript:history.back();"><i class="biticon biticon-left"></i></a>  
+			<p class="nav_title">新闻资讯</p>
 			<span id="navBtnIcon"  href="javascript:;" title="按钮" class="nav_btn_icon shenqi2">
 	            <i></i>
 	            <i></i>
@@ -104,80 +105,18 @@
 				<div class="swiper-pagination"></div>
 			</div>
 		</section>
-		<section class="sort-cont" id="bannerSwiper">
-			<ul>
-				<li><a href=""><p class="lanse"><i class="biticon biticon-relation"></i></p><h1>区块链</h1></a></li>
-				<li><a href=""><p class="fense"><i class="biticon biticon-youxi1"></i></p><h1>游戏开发</h1></a></li>
-				<li><a href=""><p class="lvse"><i class="biticon biticon-shouji"></i></p><h1>APP微信</h1></a></li>
-				<li><a href=""><p class="chengse"><i class="biticon biticon-meiyuandollar155"></i></p><h1>金融软件</h1></a></li>
-			</ul>
-		</section>
-		<section class="business-cont" id="bannerSwiper">
-			<div class="tiele-cont">
-				<h2 class="huise">主营业务<span><i></i>Main business</span></h2>
-				<div class="zhongx"></div>
-			</div>
-			<ul class="business_list">
-				<li>
-					<a href="">
-						<h1><i class="biticon biticon-deploymentunit"></i><b></b>区块链<span>查看详情》</span></h1>
-						<p>区块链是分布式数据存储、点对点传输、共识机制、加密算法等计算机技术的新型应用模式。</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<h1><i class="biticon biticon-gameshield"></i><b></b>游戏开发<span>查看详情》</span></h1>
-						<p>手机游戏开发指专门制作和开发手机游戏。它的处理能力与台式机的标准处理能力相比很有限，但是足够运行一个小型的游戏。</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<h1><i class="biticon biticon-app"></i><b></b>APP微信<span>查看详情》</span></h1>
-						<p>手机APP应用软件制作和微信公众号、小程序开发，拥有一支热情专业的开发团队，用户的诉求就是恋比特的追求。</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<h1><i class="biticon biticon-jiaoyiguanli"></i><b></b>金融软件<span>查看详情》</span></h1>
-						<p>金融指货币的发行、流通和回笼，贷款的发放和收回，存款的存入和提取，汇兑的往来等经济活动。</p>
-					</a>
-				</li>
-			</ul>
-		</section>
-		<section class="product-cont" id="bannerSwiper">
-			<div class="tiele-cont">
-				<h2 class="baise">特色产品<span><i></i>Characteristic product</span></h2>
-				<div class="zhongx"></div>
-			</div>
+		
+		
+		<section class="news-cont baise" id="bannerSwiper">
+			<div class="news_title"><h3 class="huise"><img class="newsTitleLt" src="img/title_left.png">新闻资讯<img class="newsTitleGt" src="img/title_right.png"></h3></div>
 			<div class="product_tab shenqi1">
-				<a class="shenqi2 rightB hover_tab" href="">区块链</a>
-				<a class="shenqi2 rightB" href="">小游戏</a>
-				<a class="shenqi2 rightB" href="">特色棋牌</a>
+				<a class="shenqi2 rightB hover_tab" href="">恋比特</a>
+				<a class="shenqi2 rightB" href="">区块链</a>
+				<a class="shenqi2 rightB" href="">游戏</a>
 				<a class="shenqi2 rightB" href="">金融软件</a>
 				<a class="shenqi2" href="">APP微信</a>
 			</div>
-			<ul class="product_list">
-				<li>
-					<a href=""><img src="img/product_01.png"><h1>区块链技术开发</h1></a>
-				</li>
-				<li>
-					<a href=""><img src="img/product_01.png"><h1>区块链项目服务</h1></a>
-				</li>
-				<li>
-					<a href=""><img src="img/product_01.png"><h1>区块链生态</h1></a>
-				</li>
-				<li>
-					<a href=""><img src="img/product_01.png"><h1>区块链开发支持</h1></a>
-				</li>
-			</ul>
-			<div class="product_more"><a href="">MORE+</a></div>
-		</section>
-		<section class="news-cont" id="bannerSwiper">
-			<div class="tiele-cont">
-				<h2 class="huise">新闻资讯<span><i></i>News and information</span></h2>
-				<div class="zhongx"></div>
-			</div>
-			<ul class="news_list">
+			<ul class="news_list newsCont_list">
 				<li>
 					<a href="">
 						<div class="date_cont">
@@ -239,7 +178,7 @@
 					</a>
 				</li>
 			</ul>
-			<div class="product_more"><a href="">MORE+</a></div>
+			<p class="load_more"><a href="">点击加载更多</a></p>
 		</section>
 		<footer class="contact-cont" id="bannerSwiper">
 			<div class="tiele-cont">
