--- a/lbtMobile/Quality_service.html
+++ b/lbtMobile/Quality_service.html
@@ -29,43 +29,43 @@
 		</nav>
 		<ul class="nav_cont" id="navCont">
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon biticon biticon-shouye"></i><span>首页</span></a>
+				<a href="index.html"><i class="nav-icon biticon biticon-shouye"></i><span>首页</span></a>
 			</li>
 			<li class="nav-list">
 				<a href="javascript:;"><i class="nav-icon biticon biticon-wangluo"></i><span>区块链</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
-					<li><a href="javascript:;"><span>区块链技术开发</span></a></li>
-					<li><a href="javascript:;"><span>区块链项目服务</span></a></li>
-					<li><a href="javascript:;"><span>区块链生态</span></a></li>
+					<li><a href=""><span>区块链技术开发</span></a></li>
+					<li><a href=""><span>区块链项目服务</span></a></li>
+					<li><a href=""><span>区块链生态</span></a></li>
 				</ul>
 			</li>
 			<li class="nav-list">
 				<a href="javascript:;"><i class="nav-icon  biticon biticon-youxi"></i><span>游戏开发</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
-					<li><a href="javascript:;"><span>棋牌游戏</span></a></li>
-					<li><a href="javascript:;"><span>H5游戏</span></a></li>
-					<li><a href="javascript:;"><span>其他游戏开发</span></a></li>
+					<li><a href=""><span>棋牌游戏</span></a></li>
+					<li><a href=""><span>H5游戏</span></a></li>
+					<li><a href=""><span>其他游戏开发</span></a></li>
 				</ul>
 			</li>
 			<li class="nav-list">
 				<a href="javascript:;"><i class="nav-icon  biticon biticon-shouji1"></i><span>APP微信开发</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
-					<li><a href="javascript:;"><span>APP开发</span></a></li>
-					<li><a href="javascript:;"><span>微信开发</span></a></li>
-					<li><a href="javascript:;"><span>其他软件开发</span></a></li>
+					<li><a href=""><span>APP开发</span></a></li>
+					<li><a href=""><span>微信开发</span></a></li>
+					<li><a href=""><span>其他软件开发</span></a></li>
 				</ul>
 			</li>
 			<li class="nav-list">
 				<a href="javascript:;"><i class="nav-icon  biticon biticon-xiangao"></i><span>金融软件开发</span></a>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon  biticon biticon-xihuan"></i><span>品质服务</span></a>
+				<a href="Quality_service.html"><i class="nav-icon  biticon biticon-xihuan"></i><span>品质服务</span></a>
 			</li>
 			<li class="nav-list">
 				<a href="javascript:;"><i class="nav-icon  biticon biticon-yonghuming"></i><span>关于我们</span></a>
 			</li>
 			<li class="nav-list">
-				<a href="javascript:;"><i class="nav-icon  biticon biticon-liebiaodaohang_zixun"></i><span>行业咨讯</span></a>
+				<a href="News.html"><i class="nav-icon  biticon biticon-liebiaodaohang_zixun"></i><span>行业咨讯</span></a>
 			</li>
 		</ul>
 		<!-- 底部导航 -->
@@ -82,152 +82,86 @@
 	<div id="hideNavCont"></div>
 	<!-- 头部导航// -->
 	<div class="main">
-		<section class="banner-swiper" id="bannerSwiper">
-			<div class="swiper-container">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<a href=""><img src="img/banner_01.png"></a>
-					</div>
-					<div class="swiper-slide">
-						<a href=""><img src="img/banner_02.png"></a>
-					</div>
-					<div class="swiper-slide">
-						<a href=""><img src="img/banner_03.png"></a>
-					</div>
-					<div class="swiper-slide">
-						<a href=""><img src="img/banner_04.png"></a>
-					</div>
-					<div class="swiper-slide">
-						<a href=""><img src="img/banner_05.png"></a>
-					</div>
-				</div>
-				<!-- Add Pagination -->
-				<div class="swiper-pagination"></div>
-			</div>
-		</section>
-		
-		
+		<section class="banner-bgimg" id="bBgimg"></section>
 		<section class="news-cont baise" id="bannerSwiper">
-			<div class="news_title"><h3 class="huise"><img class="newsTitleLt" src="img/title_left.png">新闻资讯<img class="newsTitleGt" src="img/title_right.png"></h3></div>
-			<div class="product_tab shenqi1">
-				<a class="shenqi2 rightB hover_tab" href="">恋比特</a>
-				<a class="shenqi2 rightB" href="">区块链</a>
-				<a class="shenqi2 rightB" href="">游戏</a>
-				<a class="shenqi2 rightB" href="">金融软件</a>
-				<a class="shenqi2" href="">APP微信</a>
-			</div>
-			<ul class="news_list newsCont_list">
-				<li>
+			<div class="news_title wow fadeInUp center animated" data-wow-delay="0.1s"><h3 class="huise"><img class="newsTitleLt" src="img/title_left.png">服务范围<img class="newsTitleGt" src="img/title_right.png"></h3></div>
+			<ul class="qs_list">
+				<li class="wow fadeInUp center animated" data-wow-delay="0.1s">
 					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
+						<div class="qsimg_cont">
+							<i class="biticon biticon-inspect"></i>
 						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						<div class="qs_text">
+							<h1>定期巡检服务</h1>
+							<p>恋比特技术支持团队对客户系统每季度进行一次技术巡检服务。了解客户系统使用情况，及时为客户解决技术问题。</p>
 						</div>
 					</a>
 				</li>
-				<li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.15s">
 					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
+						<div class="qsimg_cont">
+							<i class="biticon biticon-kefu"></i>
 						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						<div class="qs_text">
+							<h1>远程技术支持服务</h1>
+							<p>客户通过电子邮件、电话、传真向恋比特技术支持团队进行咨询、请求技术支持服务；技术支持团队会立即提供技术支持服务。</p>
 						</div>
 					</a>
 				</li>
-				<li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.2s">
 					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
+						<div class="qsimg_cont">
+							<i class="biticon biticon-leijishufuwux"></i>
 						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						<div class="qs_text">
+							<h1>现场技术支持服务</h1>
+							<p>在远程技术支持服务无效的情况下，恋比特技术支持团队指派专业维护人员到客户现场进行技术支持服务。</p>
 						</div>
 					</a>
 				</li>
-				<li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.25s">
 					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
+						<div class="qsimg_cont">
+							<i class="biticon biticon-wendang-yuanshijituantubiao"></i>
 						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						<div class="qs_text">
+							<h1>建立用户档案</h1>
+							<p>在客户项目启动开始，恋比特即建立详细的项目实施、系统运行和技术支持服务档案，以便以后提供技术支持服务和系统分析。</p>
 						</div>
 					</a>
 				</li>
-				<li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.3s">
 					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
+						<div class="qsimg_cont">
+							<i class="biticon biticon-yijianfankui"></i>
 						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						<div class="qs_text">
+							<h1>客户即时反馈</h1>
+							<p>技术支持员工的工作态度、责任心、服务效果将由客户进行评分评价，作为其年度工作考核关键内容之一。</p>
 						</div>
 					</a>
 				</li>
-				<li>
+				<li class="wow fadeInUp center animated" data-wow-delay="0.35s">
 					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
+						<div class="qsimg_cont">
+							<i class="biticon biticon-dianhua"></i>
 						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
+						<div class="qs_text">
+							<h1>客户服务热线</h1>
+							<p>恋比特提供专门的客户服务热线，为客户提供问题咨询、解答、投诉、反馈等服务。</p>
 						</div>
 					</a>
-				</li>
-				<li>
-					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
-						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<div class="date_cont">
-							<span class="month_cont">08</span>
-							<span class="day_cont">18</span>
-						</div>
-						<div class="news_text">
-							<h1>区块链促进电子账单的演变</h1>
-							<p>如你所知, 电子账单很快就会成为强制性的。用基于区块链...</p>
-						</div>
-					</a>
-				</li>
+				</li>				
 			</ul>
-			<p class="load_more"><a href="">点击加载更多</a></p>
 		</section>
-		<footer class="contact-cont" id="bannerSwiper">
-			<div class="tiele-cont">
-				<h2 class="baise">联系我们<span><i></i>Contact us</span></h2>
-				<div class="zhongx"></div>
-			</div>
-			<div class="content_text">
-				<p>电　　话：<a href="tel:400-109-3531">400-109-3531</a></p>
-				<p>官　　网：<a href="">www.lovebit999.com</a></p>
-				<p>公司名称：恋比特国际科技发展(北京)有限责任公司</p>
-				<p>办公地址：北京市朝阳区建国门外大街甲6号D座28层</p>
-			</div>
-		</footer>
+		<section class="news-cont baise" id="bannerSwiper">
+			<div class="news_title wow fadeInUp center animated" data-wow-delay="0.1s"><h3 class="huise"><img class="newsTitleLt" src="img/title_left.png">服务理念<img class="newsTitleGt" src="img/title_right.png"></h3></div>
+			
+		</section>
+		<section class="news-cont baise" id="bannerSwiper">
+			<div class="news_title wow fadeInUp center animated" data-wow-delay="0.1s"><h3 class="huise"><img class="newsTitleLt" src="img/title_left.png">技术支持<img class="newsTitleGt" src="img/title_right.png"></h3></div>
+			
+		</section>
 		
 	</div>
 	<script src="js/jquery-3.2.1.min.js"></script>
