--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -33,32 +33,32 @@
 			<li class="nav-list">
 				<a href="javascript:;"><i class="nav-icon biticon biticon-wangluo"></i><span>区块链</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
-					<li><a href="javascript:;"><span>区块链技术开发</span></a></li>
-					<li><a href="javascript:;"><span>区块链项目服务</span></a></li>
-					<li><a href="javascript:;"><span>区块链生态</span></a></li>
+					<li><a href=""><span>区块链技术开发</span></a></li>
+					<li><a href=""><span>区块链项目服务</span></a></li>
+					<li><a href=""><span>区块链生态</span></a></li>
 				</ul>
 			</li>
 			<li class="nav-list">
 				<a href="javascript:;"><i class="nav-icon  biticon biticon-youxi"></i><span>游戏开发</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
-					<li><a href="javascript:;"><span>棋牌游戏</span></a></li>
-					<li><a href="javascript:;"><span>H5游戏</span></a></li>
-					<li><a href="javascript:;"><span>其他游戏开发</span></a></li>
+					<li><a href=""><span>棋牌游戏</span></a></li>
+					<li><a href=""><span>H5游戏</span></a></li>
+					<li><a href=""><span>其他游戏开发</span></a></li>
 				</ul>
 			</li>
 			<li class="nav-list">
 				<a href="javascript:;"><i class="nav-icon  biticon biticon-shouji1"></i><span>APP微信开发</span><i class="biticon biticon-right"></i></a>
 				<ul class="secondary_list">
-					<li><a href="javascript:;"><span>APP开发</span></a></li>
-					<li><a href="javascript:;"><span>微信开发</span></a></li>
-					<li><a href="javascript:;"><span>其他软件开发</span></a></li>
+					<li><a href=""><span>APP开发</span></a></li>
+					<li><a href=""><span>微信开发</span></a></li>
+					<li><a href=""><span>其他软件开发</span></a></li>
 				</ul>
 			</li>
 			<li class="nav-list">
 				<a href=""><i class="nav-icon  biticon biticon-xiangao"></i><span>金融软件开发</span></a>
 			</li>
 			<li class="nav-list">
-				<a href=""><i class="nav-icon  biticon biticon-xihuan"></i><span>品质服务</span></a>
+				<a href="Quality_service.html"><i class="nav-icon  biticon biticon-xihuan"></i><span>品质服务</span></a>
 			</li>
 			<li class="nav-list">
 				<a href=""><i class="nav-icon  biticon biticon-yonghuming"></i><span>关于我们</span></a>
