--- a/lbtMobile/Quality_service.html
+++ b/lbtMobile/Quality_service.html
@@ -154,12 +154,47 @@
 				</li>				
 			</ul>
 		</section>
-		<section class="news-cont baise" id="bannerSwiper">
+		<section class="fwln-cont" id="bannerSwiper">
 			<div class="news_title wow fadeInUp center animated" data-wow-delay="0.1s"><h3 class="huise"><img class="newsTitleLt" src="img/title_left.png">服务理念<img class="newsTitleGt" src="img/title_right.png"></h3></div>
-			
+			<div class="fwln_text wow fadeInUp center animated" data-wow-delay="0.2s">
+				<p>服务理念恋比特国际科技发展(北京)有限责任公司（以下简称“恋比特”），一直致力于打造以“客户满意度”为核心的服务体系，恋比特充分认识到服务对于企业的价值，秉承一贯的“精益求精”服务作风，打造共赢的服务价值体系。</p>
+				<p>恋比特坚持的一贯发展战略是：“为企业客户长期发展提供解决方案与服务的科技公司”。恋比特特别注重服务能力的培养，公司专门成立了面向客户的技术支持服务团队，目的就是为企业客户提供专业的技术支持与维保服务。</p>
+			</div>
 		</section>
 		<section class="news-cont baise" id="bannerSwiper">
 			<div class="news_title wow fadeInUp center animated" data-wow-delay="0.1s"><h3 class="huise"><img class="newsTitleLt" src="img/title_left.png">技术支持<img class="newsTitleGt" src="img/title_right.png"></h3></div>
+			<div class="technology wow fadeInUp center animated" data-wow-delay="0.2s">
+				<p id="jiShu">
+					<a class="jishu_hover" href="javascript:;"><i class="nav-icon biticon biticon-aixin"></i>技术服务</a>
+					<a href="javascript:;"><i class="nav-icon biticon biticon-dingzhijiaju"></i>设计服务</a>
+					<a href="javascript:;"><i class="nav-icon biticon biticon-xiaoxi"></i>咨询服务</a>
+				</p>
+				<div id="jishuTab" class="jishutab">
+					<ul class="jishubox">
+						<li>1、在线客服提供系统使用帮助。</li>
+						<li>2、运维工程师提供技术支持。</li>
+						<li>3、3天免费现场培训，全套培训视频。</li>
+						<li>4、服务器定期监测服务。</li>
+						<li>5、技术人员随时待命应急处理各类失误操作。</li>
+						<li>6、终身免费解决系统故障。</li>
+					</ul>
+					<ul class="jishubox">
+						<li>1、资深美工设计网站宣传图。</li>
+						<li>2、专业UI工程师定制往网站页面</li>
+						<li>3、调试网站兼容性。</li>
+						<li>4、设计SEO关键词和描述。</li>
+						<li>5、设计线下推广宣传册。</li>
+					</ul>
+					<ul class="jishubox">
+						<li>1、协助与其他第三方平台洽谈。</a></li>
+						<li>2、提供业务开展和运营咨询使资源利用最大化。</li>
+						<li>3、上百家平台实施经验，为您提供合理的团队建设建议。</li>
+						<li>4、提供经十几家平台共同验证的推广方案和建议。</li>
+						<li>5、与多家行业培训机构合作，可提供优惠的培训课程。</li>
+						<li>6、提供运维团队各类维护咨询，上百家实验得出的安全方案。</li>
+					</ul>
+				</div>
+			</div>
 			
 		</section>
 		
