--- a/lbtMobile/index.html
+++ b/lbtMobile/index.html
@@ -85,7 +85,7 @@
 			<img src="img/index_img6.png" class="lineBg">
 			<img src="img/index_img1.png" class="rollIn animated busimg_1">
 			<img src="img/index_img2.png" class="zoomInDown animated busimg_2">
-			<img src="img/index_img3.png" class="tada animated busimg_3">
+			<img src="img/index_img3.png" class="slideInLeft animated busimg_3">
 			<img src="img/index_img4.png" class="fadeInDown animated busimg_4">
 			<div class="Head_aTitle">
 				<h1>十多年专注互联网<br />开发与服务</h1>
